agora_cpp/CSharp_RTC_SDK/src/cross-platform-sdk-module/rtc/c_api/cross_platform_c_api_wrapper.h

enum API_TYPE_AUDIO_EFFECT {
    START_AUDIO_MIXING = 45,
    STOP_AUDIO_MIXING = 46,
    PAUSE_AUDIO_MIXING = 47,
    RESUME_AUDIO_MIXING = 48,
    SET_HIGH_QUALITY_AUDIO_PARAMETERS = 49,
    ADJUST_AUDIO_MIXING_VOLUME = 50,
    ADJUST_AUDIO_MIXING_PLAYOUT_VOLUME = 51,
    GET_AUDIO_MIXING_PLAYOUT_VOLUME = 52,
    ADJUST_AUDIO_MIXING_PUBLISH_VOLUME = 53,
    GET_AUDIO_MIXING_PUBLISH_VOLUME = 54,
    GET_AUDIO_MIXING_DURATION = 55,
    GET_AUDIO_MIXING_CURRENT_POSITION = 56,
    SET_AUDIO_MIXING_POSITION = 57,
    SET_AUDIO_MIXING_PITCH = 58,
    GET_EFFECTS_VOLUME = 59,
    SET_EFFECTS_VOLUME = 60,
    SET_VOLUME_OF_EFFECT = 61,
    PLAY_EFFECT = 63,
    STOP_EFFECT = 64,
    STOP_ALL_EFFECTS = 65,
    PRE_LOAD_EFFECT = 66,
    UN_LOAD_EFFECT = 67,
    PAUSE_EFFECT = 68,
    PAUSE_ALL_EFFECTS = 69,
    RESUME_EFFECT = 70,
    RESUME_ALL_EFFECTS = 71,
    ENABLE_SOUND_POSITION_INDICATION = 72,
    SET_LOCAL_VOICE_PITCH = 74,
    SET_LOCAL_VOICE_EQUALIZATION = 75,
    SET_LOCAL_VOICE_REVERB = 76,
    SET_LOCAL_VOICE_CHANGER = 77,
    SET_LOCAL_VOICE_REVERB_PRESET = 78,
    SET_EXTERNAL_AUDIO_SOURCE = 88,
    SET_EXTERNAL_AUDIO_SINK = 89,
    SET_RECORDING_AUDIO_FRAME_PARAMETERS = 90,
    SET_PLAYBACK_AUDIO_FRAME_PARAMETERS = 91,
    SET_MIXED_AUDIO_FRAME_PARAMETERS = 92,
};
enum ERROR_CODE {
    ERROR_OK = 0,
    ERROR_INVALID_API_TYPE = -100,
    ERROR_INVALID_PARAM = -101,
    ERROR_PARSE_PARAMETER = -102,
    ERROR_NO_CURRENT_PARAMETER = -103,
    ERROR_NOT_SUPPORT_API = -4,
    ERROR_NOT_INITIALIZE_OBSERVER = -104,
    ERROR_NO_DEVICE = -105,
    ERROR_ENGINE_EXIST = -106,
    ERROR_NO_ENGINE = -107,
    ERROR_INVALID_DEVICE_TYPE = -108,
};
enum RAW_AUDIO_FRAME_OP_MODE_TYPE {
    RAW_AUDIO_FRAME_OP_MODE_READ_ONLY = 0,
    RAW_AUDIO_FRAME_OP_MODE_WRITE_ONLY = 1,
    RAW_AUDIO_FRAME_OP_MODE_READ_WRITE = 2,
};
enum AUDIO_EQUALIZATION_BAND_FREQUENCY {
    AUDIO_EQUALIZATION_BAND_31 = 0,
    AUDIO_EQUALIZATION_BAND_62 = 1,
    AUDIO_EQUALIZATION_BAND_125 = 2,
    AUDIO_EQUALIZATION_BAND_250 = 3,
    AUDIO_EQUALIZATION_BAND_500 = 4,
    AUDIO_EQUALIZATION_BAND_1K = 5,
    AUDIO_EQUALIZATION_BAND_2K = 6,
    AUDIO_EQUALIZATION_BAND_4K = 7,
    AUDIO_EQUALIZATION_BAND_8K = 8,
    AUDIO_EQUALIZATION_BAND_16K = 9,
};
enum AUDIO_REVERB_TYPE {
    AUDIO_REVERB_DRY_LEVEL = 0, 
    AUDIO_REVERB_WET_LEVEL = 1, 
    AUDIO_REVERB_ROOM_SIZE = 2, 
    AUDIO_REVERB_WET_DELAY = 3, 
    AUDIO_REVERB_STRENGTH = 4, 
};
enum VOICE_CHANGER_PRESET {
    VOICE_CHANGER_OFF = 0x00000000, 
    VOICE_CHANGER_OLDMAN = 0x00000001,
    VOICE_CHANGER_BABYBOY = 0x00000002,
    VOICE_CHANGER_BABYGIRL = 0x00000003,
    VOICE_CHANGER_ZHUBAJIE = 0x00000004,
    VOICE_CHANGER_ETHEREAL = 0x00000005,
    VOICE_CHANGER_HULK = 0x00000006,
    VOICE_BEAUTY_VIGOROUS = 0x00100001, 
    VOICE_BEAUTY_DEEP = 0x00100002,
    VOICE_BEAUTY_MELLOW = 0x00100003,
    VOICE_BEAUTY_FALSETTO = 0x00100004,
    VOICE_BEAUTY_FULL = 0x00100005,
    VOICE_BEAUTY_CLEAR = 0x00100006,
    VOICE_BEAUTY_RESOUNDING = 0x00100007,
    VOICE_BEAUTY_RINGING = 0x00100008,
    VOICE_BEAUTY_SPACIAL = 0x00100009,
    GENERAL_BEAUTY_VOICE_MALE_MAGNETIC = 0x00200001,
    GENERAL_BEAUTY_VOICE_FEMALE_FRESH = 0x00200002,
    GENERAL_BEAUTY_VOICE_FEMALE_VITALITY = 0x00200003
};
enum AUDIO_REVERB_PRESET {
    AUDIO_REVERB_OFF = 0x00000000, 
    AUDIO_REVERB_FX_KTV = 0x00100001,
    AUDIO_REVERB_FX_VOCAL_CONCERT = 0x00100002,
    AUDIO_REVERB_FX_UNCLE = 0x00100003,
    AUDIO_REVERB_FX_SISTER = 0x00100004,
    AUDIO_REVERB_FX_STUDIO = 0x00100005,
    AUDIO_REVERB_FX_POPULAR = 0x00100006,
    AUDIO_REVERB_FX_RNB = 0x00100007,
    AUDIO_REVERB_FX_PHONOGRAPH = 0x00100008,
    AUDIO_REVERB_POPULAR = 0x00000001,
    AUDIO_REVERB_RNB = 0x00000002,
    AUDIO_REVERB_ROCK = 0x00000003,
    AUDIO_REVERB_HIPHOP = 0x00000004,
    AUDIO_REVERB_VOCAL_CONCERT = 0x00000005,
    AUDIO_REVERB_KTV = 0x00000006,
    AUDIO_REVERB_STUDIO = 0x00000007,
    AUDIO_VIRTUAL_STEREO = 0x00200001
};
enum CONNECTION_STATE_TYPE {
    CONNECTION_STATE_DISCONNECTED = 1,
    CONNECTION_STATE_CONNECTING = 2,
    CONNECTION_STATE_CONNECTED = 3,
    CONNECTION_STATE_RECONNECTING = 4,
    CONNECTION_STATE_FAILED = 5,
};
struct ChannelMediaInfo {
    const char* channelName;
    const char* token;
    uid_t uid;
};
struct ChannelMediaRelayConfiguration {
    struct ChannelMediaInfo* srcInfo;
    struct ChannelMediaInfo* destInfos;
    int destCount;
};
enum AUDIO_FRAME_TYPE {
    FRAME_TYPE_PCM16 = 0, 
};
struct AudioFrame {
    enum AUDIO_FRAME_TYPE type;
    int samples; 
    int bytesPerSample; 
    int channels; 
    int samplesPerSec; 
    void* buffer; 
    long long renderTimeMs;
    int avsync_type;
};
enum VIDEO_BUFFER_TYPE {
    VIDEO_BUFFER_RAW_DATA = 1,
};
enum VIDEO_PIXEL_FORMAT {
    VIDEO_PIXEL_UNKNOWN = 0,
    VIDEO_PIXEL_I420 = 1,
    VIDEO_PIXEL_BGRA = 2,
    VIDEO_PIXEL_NV21 = 3,
    VIDEO_PIXEL_RGBA = 4,
    VIDEO_PIXEL_IMC2 = 5,
    VIDEO_PIXEL_ARGB = 7,
    VIDEO_PIXEL_NV12 = 8,
    VIDEO_PIXEL_I422 = 16,
};
struct ExternalVideoFrame {
    enum VIDEO_BUFFER_TYPE type;
    enum VIDEO_PIXEL_FORMAT format;
    void* buffer;
    int stride;
    int height;
    int cropLeft;
    int cropTop;
    int cropRight;
    int cropBottom;
    int rotation;
    long long timestamp;
};
enum MEDIA_SOURCE_TYPE {
    AUDIO_PLAYOUT_SOURCE = 0,
    AUDIO_RECORDING_SOURCE = 1,
};
enum ENCRYPTION_MODE {
    AES_128_XTS = 1,
    AES_128_ECB = 2,
    AES_256_XTS = 3,
    SM4_128_ECB = 4,
    MODE_END,
};
struct EncryptionConfig {
    enum ENCRYPTION_MODE encryptionMode;
    const char* encryptionKey;
};
typedef void* IRtcEngineBridge_ptr;
extern "C" DllExport enum ERROR_CODE
startChannelMediaRelay(IRtcEngineBridge_ptr apiBridge, struct ChannelMediaRelayConfiguration configuration);
extern "C" DllExport enum ERROR_CODE
updateChannelMediaRelay(IRtcEngineBridge_ptr apiBridge, struct ChannelMediaRelayConfiguration configuration);
extern "C" DllExport enum ERROR_CODE
stopChannelMediaRelay(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
removeInjectStreamUrl(IRtcEngineBridge_ptr apiBridge, const char* url);
extern "C" DllExport enum CONNECTION_STATE_TYPE
getConnectionState(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
setParameters(IRtcEngineBridge_ptr apiBridge, const char* parameters);
extern "C" DllExport enum ERROR_CODE
setPlaybackDeviceVolume(IRtcEngineBridge_ptr apiBridge, int volume);
extern "C" DllExport enum ERROR_CODE
startAudioMixing(IRtcEngineBridge_ptr apiBridge, const char* filePath, BOOL loopback, BOOL replace, int cycle);
extern "C" DllExport enum ERROR_CODE
stopAudioMixing(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
pauseAudioMixing(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
resumeAudioMixing(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
setHighQualityAudioParameters(IRtcEngineBridge_ptr apiBridge, BOOL fullband, BOOL stereo, BOOL fullBitrate);
extern "C" DllExport enum ERROR_CODE
adjustAudioMixingVolume(IRtcEngineBridge_ptr apiBridge, int volume);
extern "C" DllExport enum ERROR_CODE
adjustAudioMixingPlayoutVolume(IRtcEngineBridge_ptr apiBridge, int volume);
extern "C" DllExport enum ERROR_CODE
getAudioMixingPlayoutVolume(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
adjustAudioMixingPublishVolume(IRtcEngineBridge_ptr apiBridge, int volume);
extern "C" DllExport enum ERROR_CODE
getAudioMixingPublishVolume(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
getAudioMixingDuration(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
getAudioMixingCurrentPosition(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
setAudioMixingPosition(IRtcEngineBridge_ptr apiBridge, int pos );
extern "C" DllExport enum ERROR_CODE
setAudioMixingPitch(IRtcEngineBridge_ptr apiBridge, int pitch);
extern "C" DllExport enum ERROR_CODE
getEffectsVolume(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
setEffectsVolume(IRtcEngineBridge_ptr apiBridge, int volume);
extern "C" DllExport enum ERROR_CODE
setVolumeOfEffect(IRtcEngineBridge_ptr apiBridge, int soundId, int volume);
extern "C" DllExport enum ERROR_CODE
playEffect(IRtcEngineBridge_ptr apiBridge, int soundId,
    const char* filePath,
    int loopCount,
    double pitch,
    double pan,
    int gain,
    BOOL publish);
extern "C" DllExport enum ERROR_CODE
stopEffect(IRtcEngineBridge_ptr apiBridge, int soundId);
extern "C" DllExport enum ERROR_CODE
stopAllEffects(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
preloadEffect(IRtcEngineBridge_ptr apiBridge, int soundId, const char* filePath);
extern "C" DllExport enum ERROR_CODE
unloadEffect(IRtcEngineBridge_ptr apiBridge, int soundId);
extern "C" DllExport enum ERROR_CODE
pauseEffect(IRtcEngineBridge_ptr apiBridge, int soundId);
extern "C" DllExport enum ERROR_CODE
pauseAllEffects(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
resumeEffect(IRtcEngineBridge_ptr apiBridge, int soundId);
extern "C" DllExport enum ERROR_CODE
resumeAllEffects(IRtcEngineBridge_ptr apiBridge);
extern "C" DllExport enum ERROR_CODE
enableSoundPositionIndication(IRtcEngineBridge_ptr apiBridge, BOOL enabled);
extern "C" DllExport enum ERROR_CODE
setLocalVoicePitch(IRtcEngineBridge_ptr apiBridge, double pitch);
extern "C" DllExport enum ERROR_CODE
setLocalVoiceEqualization(IRtcEngineBridge_ptr apiBridge, enum AUDIO_EQUALIZATION_BAND_FREQUENCY bandFrequency, int bandGain);
extern "C" DllExport enum ERROR_CODE
setLocalVoiceReverb(IRtcEngineBridge_ptr apiBridge, enum AUDIO_REVERB_TYPE reverbKey, int value);
extern "C" DllExport enum ERROR_CODE
setLocalVoiceChanger(IRtcEngineBridge_ptr apiBridge, enum VOICE_CHANGER_PRESET voiceChanger);
extern "C" DllExport enum ERROR_CODE
setLocalVoiceReverbPreset(IRtcEngineBridge_ptr apiBridge, enum AUDIO_REVERB_PRESET reverbPreset);
extern "C" DllExport enum ERROR_CODE
setExternalAudioSource(IRtcEngineBridge_ptr apiBridge, BOOL enabled, int sampleRate, int channels);
extern "C" DllExport enum ERROR_CODE
setExternalAudioSink(IRtcEngineBridge_ptr apiBridge, BOOL enabled, int sampleRate, int channels);
extern "C" DllExport enum ERROR_CODE
setRecordingAudioFrameParameters(IRtcEngineBridge_ptr apiBridge, int sampleRate,
    int channel,
    enum RAW_AUDIO_FRAME_OP_MODE_TYPE mode,
    int samplesPerCall);
extern "C" DllExport enum ERROR_CODE
setPlaybackAudioFrameParameters(IRtcEngineBridge_ptr apiBridge, int sampleRate,
    int channel,
    enum RAW_AUDIO_FRAME_OP_MODE_TYPE mode,
    int samplesPerCall);
extern "C" DllExport enum ERROR_CODE
setMixedAudioFrameParameters(IRtcEngineBridge_ptr apiBridge, int sampleRate, int samplesPerCall);
extern "C" DllExport enum ERROR_CODE
pushAudioFrame(IRtcEngineBridge_ptr apiBridge, enum MEDIA_SOURCE_TYPE type,
    struct AudioFrame* frame,
    BOOL wrap);
extern "C" DllExport enum ERROR_CODE
pushAudioFrame2(IRtcEngineBridge_ptr apiBridge, struct AudioFrame* frame);
extern "C" DllExport enum ERROR_CODE
pullAudioFrame(IRtcEngineBridge_ptr apiBridge, struct AudioFrame* frame);
extern "C" DllExport enum ERROR_CODE
setExternalVideoSource(IRtcEngineBridge_ptr apiBridge, BOOL enable, BOOL useTexture);
extern "C" DllExport enum ERROR_CODE
pushVideoFrame(IRtcEngineBridge_ptr apiBridge, struct ExternalVideoFrame* frame);
extern "C" DllExport enum ERROR_CODE
enableEncryption(IRtcEngineBridge_ptr apiBridge, BOOL enabled, const struct EncryptionConfig config);