OneToOneVideo/OneToOneVideo/agorartc/AgoraRtcApiNative.cs


        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE startChannelMediaRelay(IRtcEngineBridge_ptr apiBridge,
            ChannelMediaRelayConfiguration configuration);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE updateChannelMediaRelay(IRtcEngineBridge_ptr apiBridge,
            ChannelMediaRelayConfiguration configuration);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE stopChannelMediaRelay(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE removeInjectStreamUrl(IRtcEngineBridge_ptr apiBridge, string url);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern CONNECTION_STATE_TYPE getConnectionState(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setParameters(IRtcEngineBridge_ptr apiBridge, string parameters);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setPlaybackDeviceVolume(IRtcEngineBridge_ptr apiBridge, int volume);

        // API_TYPE_AUDIO_EFFECT
        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE startAudioMixing(IRtcEngineBridge_ptr apiBridge, string filePath,
            int loopback, int replace, int cycle);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE stopAudioMixing(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE pauseAudioMixing(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE resumeAudioMixing(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setHighQualityAudioParameters(IRtcEngineBridge_ptr apiBridge, int fullband,
            int stereo, int fullBitrate);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE adjustAudioMixingVolume(IRtcEngineBridge_ptr apiBridge, int volume);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE adjustAudioMixingPlayoutVolume(IRtcEngineBridge_ptr apiBridge, int volume);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE getAudioMixingPlayoutVolume(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE adjustAudioMixingPublishVolume(IRtcEngineBridge_ptr apiBridge, int volume);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE getAudioMixingPublishVolume(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE getAudioMixingDuration(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE getAudioMixingCurrentPosition(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setAudioMixingPosition(IRtcEngineBridge_ptr apiBridge, int pos /*in ms*/);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setAudioMixingPitch(IRtcEngineBridge_ptr apiBridge, int pitch);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE getEffectsVolume(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setEffectsVolume(IRtcEngineBridge_ptr apiBridge, int volume);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setVolumeOfEffect(IRtcEngineBridge_ptr apiBridge, int soundId, int volume);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE playEffect(IRtcEngineBridge_ptr apiBridge, int soundId, string filePath,
            int loopCount, double pitch, double pan, int gain, int publish);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE stopEffect(IRtcEngineBridge_ptr apiBridge, int soundId);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE stopAllEffects(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE preloadEffect(IRtcEngineBridge_ptr apiBridge, int soundId, string filePath);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE unloadEffect(IRtcEngineBridge_ptr apiBridge, int soundId);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE pauseEffect(IRtcEngineBridge_ptr apiBridge, int soundId);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE pauseAllEffects(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE resumeEffect(IRtcEngineBridge_ptr apiBridge, int soundId);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE resumeAllEffects(IRtcEngineBridge_ptr apiBridge);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE enableSoundPositionIndication(IRtcEngineBridge_ptr apiBridge, int enabled);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLocalVoicePitch(IRtcEngineBridge_ptr apiBridge, double pitch);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLocalVoiceEqualization(IRtcEngineBridge_ptr apiBridge,
            AUDIO_EQUALIZATION_BAND_FREQUENCY bandFrequency, int bandGain);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLocalVoiceReverb(IRtcEngineBridge_ptr apiBridge,
            AUDIO_REVERB_TYPE reverbKey, int value);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLocalVoiceChanger(IRtcEngineBridge_ptr apiBridge,
            VOICE_CHANGER_PRESET voiceChanger);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setLocalVoiceReverbPreset(IRtcEngineBridge_ptr apiBridge,
            AUDIO_REVERB_PRESET reverbPreset);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setExternalAudioSource(IRtcEngineBridge_ptr apiBridge, int enabled,
            int sampleRate, int channels);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setExternalAudioSink(IRtcEngineBridge_ptr apiBridge, int enabled,
            int sampleRate, int channels);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setRecordingAudioFrameParameters(IRtcEngineBridge_ptr apiBridge,
            int sampleRate, int channel, RAW_AUDIO_FRAME_OP_MODE_TYPE mode, int samplesPerCall);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setPlaybackAudioFrameParameters(IRtcEngineBridge_ptr apiBridge,
            int sampleRate, int channel, RAW_AUDIO_FRAME_OP_MODE_TYPE mode, int samplesPerCall);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setMixedAudioFrameParameters(IRtcEngineBridge_ptr apiBridge, int sampleRate,
            int samplesPerCall);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE pushAudioFrame(IRtcEngineBridge_ptr apiBridge, MEDIA_SOURCE_TYPE type,
            ref AudioFrame frame, int wrap);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE pushAudioFrame2(IRtcEngineBridge_ptr apiBridge, ref AudioFrame frame);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE pullAudioFrame(IRtcEngineBridge_ptr apiBridge, ref AudioFrame frame);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE setExternalVideoSource(IRtcEngineBridge_ptr apiBridge, int enable,
            int useTexture);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE pushVideoFrame(IRtcEngineBridge_ptr apiBridge, ref ExternalVideoFrame frame);

        [DllImport("agora_cpp.dll", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
        internal static extern ERROR_CODE enableEncryption(IRtcEngineBridge_ptr apiBridge, int enabled,
            EncryptionConfig config);
